kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: viewer
  labels:
    app.kubernetes.io/part-of: viewer
